Bug 352993 - Save action is enabled when it should not
Summary: Save action is enabled when it should not
Status: RESOLVED FIXED
Alias: None
Product: kronometer
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: Elvis Angelaccio
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2015-09-21 15:21 UTC by Elvis Angelaccio
Modified: 2016-06-28 13:34 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.1.1
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Elvis Angelaccio 2015-09-21 15:21:42 UTC
See below.

Reproducible: Always

Steps to Reproduce:
1. Start the stopwatch
2. Pause the stopwatch and save the session with a new name
3. Start again the saved session, then pause it and save it with File -> Save
4. Reset the stopwatch
5. Start the stopwatch and then pause it

Actual Results:  
The Save action is enabled

Expected Results:  
The Save action should not be enabled
Comment 1 Elvis Angelaccio 2016-06-28 13:34:32 UTC
Git commit d0f5e6ee3892de7dadf0ab652128c6c54464fe71 by Elvis Angelaccio.
Committed on 28/06/2016 at 13:23.
Pushed by elvisangelaccio into branch '2.1'.

Reset the session on stopwatch reset

Otherwise we wrongly enter in the "pausedSession" state, instead of "paused".
It's also necessary to go in the inactive state only when no session is
available.
FIXED-IN: 2.1.1

M  +2    -3    src/mainwindow.cpp

http://commits.kde.org/kronometer/d0f5e6ee3892de7dadf0ab652128c6c54464fe71