Reset the session on stopwatch reset

Otherwise we wrongly enter in the "pausedSession" state, instead of "paused".
It's also necessary to go in the inactive state only when no session is
available.

BUG: 352993
FIXED-IN: 2.1.1